Ignore puzzle input

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Pattern for ignoring puzzle input:
+
+**/inp.txt
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/clion
 # Edit at https://www.toptal.com/developers/gitignore?templates=clion
 
